# WebSocket-Message-Exchanger

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/base/: IServer.cpp  IServer.h  base.h
src/http/: HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h
src/ws/: WsServer.cpp  WsServer.h  WsSession.cpp  WsSession.h
test/: ws_client.js
